@@ -3,6 +3,7 @@ AUTOMAKE_OPTIONS=
 bindir=		${exec_prefix}/${BINSUBDIR}
 bin_PROGRAMS=	@MAKE_ADJTIMED@
 BUILT_SOURCES=
+CLEANFILES=
 EXTRA_PROGRAMS=	adjtimed
 AM_CPPFLAGS=	-I$(top_srcdir)/include
 LDADD=		../libntp/libntp.a
