@@ -5,19 +5,38 @@ $(DEPDIR)/deps-ver: $(top_srcdir)/deps-ver
 		chmod ug+w $@
 	@cmp $(top_srcdir)/deps-ver $@ > /dev/null || (			\
 		$(MAKE) clean &&					\
-		echo -n "Prior $(abs_builddir)/$(DEPDIR) version " &&	\
+		echo -n "Prior $(subdir)/$(DEPDIR) version " &&		\
 		cat $@ &&						\
 		rm -rf $(DEPDIR) &&					\
-		mkdir $(DEPDIR) && (					\
-			cd $(top_builddir) &&				\
-			./config.status					\
-			) &&						\
-		echo -n "Cleaned $(abs_builddir)/$(DEPDIR) version " &&	\
+		mkdir $(DEPDIR) && 					\
+		case "$(top_builddir)" in				\
+		 .)							\
+		    ./config.status Makefile depfiles			\
+		    ;;							\
+		 ..)							\
+			cd .. &&					\
+			./config.status $(subdir)/Makefile depfiles &&	\
+			cd $(subdir)					\
+		    ;;							\
+		 *)							\
+		    echo 'Fatal: depsver.mf Automake fragment limited'	\
+			 'to immediate subdirectories.'	&&		\
+		    echo "top_builddir:	$(top_builddir)" &&		\
+		    echo "subdir:	$(subdir)" &&			\
+		    exit 1						\
+		    ;;							\
+		esac &&							\
+		echo -n "Cleaned $(subdir)/$(DEPDIR) version " &&	\
 		cat $(top_srcdir)/deps-ver				\
 	)
 	cp $(top_srcdir)/deps-ver $@
 
-BUILT_SOURCES += $(DEPDIR)/deps-ver
+.deps-ver: $(top_srcdir)/deps-ver
+	@[ ! -d $(DEPDIR) ] || $(MAKE) $(DEPDIR)/deps-ver
+	@touch $@
+
+BUILT_SOURCES += .deps-ver
+CLEANFILES += .deps-ver
 
 #
 # depsver.mf	included in Makefile.am for directories with .deps
@@ -34,6 +53,11 @@ BUILT_SOURCES += $(DEPDIR)/deps-ver
 # .o files built before the incompatible change are rebuilt along with
 # their updated .deps files, then remove $(DEPDIR) and recreate it as
 # empty stubs.
+#
+# It is normal when configured with --disable-dependency-tracking for
+# the DEPDIR to not have been created.  For this reason, we use the
+# intermediate target .deps-ver, which invokes make recursively if
+# DEPDIR exists.
 #
 # If you modify depsver.mf, please make the changes to the master
 # copy, the one in sntp is copied by the bootstrap script from it.
